--- a/mage/tuss_project/pipelines/get_tuss_data/metadata.yaml
+++ b/mage/tuss_project/pipelines/get_tuss_data/metadata.yaml
@@ -2,14 +2,15 @@ blocks:
 - all_upstream_blocks_executed: true
   color: grey
   configuration: {}
-  downstream_blocks: []
+  downstream_blocks:
+  - get_tuss_data_2_download_file
   executor_config: null
   executor_type: local_python
   has_callback: false
   language: python
   name: get_tuss_data_1_setup
   retry_config: null
-  status: updated
+  status: executed
   timeout: null
   type: custom
   upstream_blocks: []
@@ -17,7 +18,8 @@ blocks:
 - all_upstream_blocks_executed: true
   color: null
   configuration: {}
-  downstream_blocks: []
+  downstream_blocks:
+  - get_tuss_data_3_extract_files_from_zip
   executor_config: null
   executor_type: local_python
   has_callback: false
@@ -27,8 +29,25 @@ blocks:
   status: executed
   timeout: null
   type: data_loader
-  upstream_blocks: []
+  upstream_blocks:
+  - get_tuss_data_1_setup
   uuid: get_tuss_data_2_download_file
+- all_upstream_blocks_executed: true
+  color: null
+  configuration: {}
+  downstream_blocks: []
+  executor_config: null
+  executor_type: local_python
+  has_callback: false
+  language: python
+  name: get_tuss_data_3_extract_files_from_zip
+  retry_config: null
+  status: updated
+  timeout: null
+  type: transformer
+  upstream_blocks:
+  - get_tuss_data_2_download_file
+  uuid: get_tuss_data_3_extract_files_from_zip
 cache_block_output_in_memory: false
 callbacks: []
 concurrency_config: {}
